<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select"
        android:icon="@drawable/ic_swap_horiz_white_24dp"
        android:title="Change"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_chat_white_24dp"
        android:title="@string/action_chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_lan"
        android:orderInCategory="100"
        android:title="@string/Language"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="200"
        android:title="@string/SignOut"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="300"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
